--- a/index.html
+++ b/index.html
@@ -105,13 +105,11 @@
                         Careers
                     </a>
 
-                    <a href="#">
-                        <i class="fas fa-phone"></i>
-                        Contacts
-                    </a>
+
                     <!-- Button to Open the Modal -->
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
-                        Open modal
+                        <i class="fas fa-phone"></i>
+                        Contacts
                     </button>
 
                     <!-- The Modal -->
@@ -127,8 +125,26 @@
 
                                 <!-- Modal body -->
                                 <div class="modal-body">
-                                    Modal body..
+
+                                    <div class="container py-3">
+                                        <div class="card">
+                                            <div class="row ">
+                                                <div class="col-md-4">
+                                                    <img src="images/contacts2.jpg" class="w-100">
+                                                </div>
+
+
+                                                Contact the team.
+
+                                                <a href="http://www.jquery2dotnet.com">www.jquery2dotnet.com</a>
+                                                <br />
+
+
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
+
 
                                 <!-- Modal footer -->
                                 <div class="modal-footer">
@@ -200,7 +216,7 @@
                 <div class="card">
                     <div class="card-header" id="headingOne">
 
-                        <i class="fa fa-question-circle-o"></i>Need to find a Specialist
+                        <i class="fa fa-address-book"></i>Need to find a Specialist
 
                     </div>
 
@@ -238,7 +254,7 @@
     <div class="col-md-4">
         <div class="card">
             <div class="card-header">
-                <i class="fa fa-question-circle-o"></i>HAVE QUESTIONS</div>
+                <i class="fa fa-info"></i> Additional Questions</div>
             <div class="card-body">
                 <h3>Select Section</h3>
                 <div class="accordion accordion-3 z-depth-1-half" id="accordionEx1" role="tablist" aria-multiselectable="true">
@@ -250,91 +266,88 @@
 
                         <!-- Card header -->
                         <div class="card-headers" role="tab" id="heading4">
-                            <a data-toggle="collapse" data-parent="#accordionEx1" href="#collapse4" aria-expanded="true" aria-controls="collapse4"> Additional Questions
-                                <h3 class="mb-0 mt-3 red-text">
-                                    Additional Questions
-                                    <i class="fa fa-angle-down rotate-icon fa-2x"></i>
-                                </h3>
-                            </a>
+                            <a data-toggle="collapse" data-parent="#accordionEx1" href="#collapse4" aria-expanded="true" aria-controls="collapse4">
                         </div>
+                        <h3 class="mb-0 mt-3 red-text"> Front Office
 
-                        <!-- Card body -->
-                        <div id="collapse4" class="collapse show" role="tabpanel" aria-labelledby="heading4" data-parent="#accordionEx1">
-                            <div class="card-body pt-0">
-                                <table style="width:100%">
-                                    <tr>
-                                        <th>Firstname</th>
-                                        <th>Lastname</th>
-                                        <th>Age</th>
-                                    </tr>
-                                    <tr>
-                                        <td>Jill</td>
-                                        <td>Smith</td>
-                                        <td>50</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Eve</td>
-                                        <td>Jackson</td>
-                                        <td>94</td>
-                                    </tr>
-                                    <tr>
-                                        <td>John</td>
-                                        <td>Doe</td>
-                                        <td>80</td>
-                                    </tr>
-                                </table>
-                            </div>
-                        </div>
+                            <i class="fa fa-angle-down rotate-icon fa-2x"></i>
+                        </h3>
+                        </a>
                     </div>
-                    <!-- Accordion card -->
 
-                    <!-- Accordion card -->
-                    <div class="card">
-
-                        <!-- Card header -->
-                        <div class="card-headers" role="tab">
-                            <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx1" href="#collapse5" aria-expanded="false" aria-controls="collapse5">
-                                <h3 class="mb-0 mt-3 red-text">
-                                    Front Office
-                                    <i class="fa fa-angle-down rotate-icon fa-2x"></i>
-                                </h3>
-                            </a>
+                    <!-- Card body -->
+                    <div id="collapse4" class="collapse show" role="tabpanel" aria-labelledby="heading4" data-parent="#accordionEx1">
+                        <div class="card-body pt-0">
+                            <table style="width:100%">
+                                <tr>
+                                    <th>Firstname</th>
+                                    <th>Lastname</th>
+                                    <th>Age</th>
+                                </tr>
+                                <tr>
+                                    <td>Jill</td>
+                                    <td>Smith</td>
+                                    <td>50</td>
+                                </tr>
+                                <tr>
+                                    <td>Eve</td>
+                                    <td>Jackson</td>
+                                    <td>94</td>
+                                </tr>
+                                <tr>
+                                    <td>John</td>
+                                    <td>Doe</td>
+                                    <td>80</td>
+                                </tr>
+                            </table>
                         </div>
-
-                        <!-- Card body -->
-                        <div id="collapse5" class="collapse" role="tabpanel" aria-labelledby="heading5" data-parent="#accordionEx1">
-                            <div class="card-body pt-0">
-                                <p>As is.
-                                </p>
-                            </div>
-
-                        </div>
-                        <div class="card">
-
-                            <!-- Card header -->
-                            <div class="card-headers" role="tab">
-                                <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx1" href="#collapse6" aria-expanded="false" aria-controls="collapse6">
-                                    <h3 class="mb-0 mt-3 red-text">
-                                        Diversity inclusion
-                                        <i class="fa fa-angle-down rotate-icon fa-2x"></i>
-                                    </h3>
-                                </a>
-                            </div>
-
-                            <!-- Card body -->
-                            <div id="collapse6" class="collapse" role="tabpanel" aria-labelledby="heading6" data-parent="#accordionEx1">
-                                <div class="card-body pt-0">
-                                    <p>sup
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Accordion card -->
                     </div>
                 </div>
                 <!-- Accordion card -->
 
                 <!-- Accordion card -->
+                <div class="card">
+
+                    <!-- Card header -->
+                    <div class="card-headers" role="tab">
+                        <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx1" href="#collapse5" aria-expanded="false" aria-controls="collapse5">
+                            <h3 class="mb-0 mt-3 red-text">
+                                Diversity Inclusion
+                                <i class="fa fa-angle-down rotate-icon fa-2x"></i>
+                            </h3>
+                        </a>
+                    </div>
+
+                    <!-- Card body -->
+                    <div id="collapse5" class="collapse" role="tabpanel" aria-labelledby="heading5" data-parent="#accordionEx1">
+                        <div class="card-body pt-0">
+                            <p>As is.
+                            </p>
+                        </div>
+
+                    </div>
+                    <div class="card">
+
+                        <!-- Card header -->
+                        <div class="card-headers" role="tab">
+                            <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx1" href="#collapse6" aria-expanded="false" aria-controls="collapse6">
+                                <h3 class="mb-0 mt-3 red-text">
+                                    Diversity inclusion
+                                    <i class="fa fa-angle-down rotate-icon fa-2x"></i>
+                                </h3>
+                            </a>
+                        </div>
+
+                        <!-- Card body -->
+                        <div id="collapse6" class="collapse" role="tabpanel" aria-labelledby="heading6" data-parent="#accordionEx1">
+                            <div class="card-body pt-0">
+                                <p>sup
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Accordion card -->
+                </div>
                 <div class="card">
 
                     <!-- Card header -->
@@ -361,12 +374,17 @@
                         </div>
                     </div>
                 </div>
-                <!-- Accordion card -->
             </div>
+            <!-- Accordion card -->
 
-            <!--/.Accordion wrapper-->
+            <!-- Accordion card -->
 
+            <!-- Accordion card -->
         </div>
+
+        <!--/.Accordion wrapper-->
+
+    </div>
     </div>
     <div class="row">
         <div class="col-md-10 col-md-offset-3">s</div>
